forgot to save the file

--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
             <a id="phone" class="border-2 p-2 text-md font-bold text-teal-400 hover:border-teal-100" href="tel:832-925-6037"># 📞</a>
             <a id="insta" class="border-2 p-2 text-md font-bold text-teal-500 hover:border-teal-100" href="https://www.instagram.com/wdkaiser/?r=nametag">insta</a>
             <a id="snap" class="border-2 p-2 text-md font-bold text-teal-600 hover:border-teal-100" href="https://t.snapchat.com/KQhVWMe7">snap</a>
-            <a id="github" class="border-2 p-2 text-md font-bold text-teal-700 hover:border-teal-100" href="https://github.com/wkaisertexas">github</a>
-            <a id="contact" class="border-2 p-2 text-md font-bold text-teal-800 hover:border-teal-100" href="static/contact.vcf">⬇️ contact</a>
+            <!-- <a id="github" class="border-2 p-2 text-md font-bold text-teal-700 hover:border-teal-100" href="https://github.com/wkaisertexas">github</a>
+            <a id="contact" class="border-2 p-2 text-md font-bold text-teal-800 hover:border-teal-100" href="static/contact.vcf">⬇️ contact</a> -->
        </div>
         
         <p class="">p(cs | me) > 0.8</p>
