added google analytics to contact page

--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,18 @@
     <!-- <script src="/js/main.js"></script>
 
     <script async onload="on3JSLoaded();" src="/js/three.js"></script> -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKDGVM797T"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
+        function gtag() {
+            dataLayer.push(arguments);
+        }
 
+        gtag('js', new Date());
+
+        gtag('config', 'G-XKDGVM797T');
+    </script>
 </head>
 <body class="bg-beige flex flex-col justify-between min-h-screen items-center">
     <div class="flex grow flex-col justify-center space-y-2 m-2 max-w-md items-center">
