updated index's description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A personal site for my resume and hobbies">
 
     <title>William Kaiser's Portfolio Site</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
@@ -59,8 +60,7 @@
                 <h3 class="whitespace-nowrap text-lg">Who is Will(iam) Kaiser?</h3>
 
                 <p class="max-w-md">
-                    A high school senior who was recently very bummed out about college applications. I am interested in
-                    programming, data science and recently web development. Oh, and I make bread. I have made 62 loaves
+                   I am interested in programming, data science and recently web development. Oh, and I make bread. I have made 62 loaves
                     in the past 90 days.
                 </p>
 
