Updated medium name

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div class="page-component" id="hobbies">
         <h2>Hobbies</h2>
 
-        <ul class="list-disc mx-4 my-2 p-1">
+        <ul class="mx-4 my-2 p-1">
             <li>
                 <h3>Arduino</h3>
                 <p>Started off in Arduino in 5th or 6th grade (I do not remember). Make little hobby projects.</p>
@@ -279,25 +279,25 @@
         </ul>
     </div>
 
-    <div class="page-component" id="statistics">
-        <h2>Statistics</h2>
-        <figure class="m-4 border px-12 w-1/2">
-            <blockquote class="text-right">
-                "If you cannot measure it, you cannot improve it."
-            </blockquote>
-            <figcaption>&#8212 Lord Kelvin, an absolute unit</figcaption>
-        </figure>
-
-        <p class="m-4">Google's Data Studio is the software that I used to aggregate everything I need in a
-            dashboard to see how the things that I have been building are going. Building this was mostly for me to
-            relieve my OCD about data-driven impact.
-
-        <figure class="m-4 w-fit border shadow-black shadow-lg">
-            <iframe width="600" height="450"
-                    src="https://datastudio.google.com/embed/reporting/e1bb6678-b8fa-4918-ab84-ddc35097590e/page/cwepC"
-                    frameborder="0" style="border:0" allowfullscreen></iframe>
-        </figure>
-    </div>
+    <!-- <div class="page-component" id="statistics"> -->
+    <!--     <h2>Statistics</h2> -->
+    <!--     <figure class="m-4 border px-12 w-1/2"> -->
+    <!--         <blockquote class="text-right"> -->
+    <!--             "If you cannot measure it, you cannot improve it." -->
+    <!--         </blockquote> -->
+    <!--         <figcaption>&#8212 Lord Kelvin, an absolute unit</figcaption> -->
+    <!--     </figure> -->
+    <!---->
+    <!--     <p class="m-4">Google's Data Studio is the software that I used to aggregate everything I need in a -->
+    <!--         dashboard to see how the things that I have been building are going. Building this was mostly for me to -->
+    <!--         relieve my OCD about data-driven impact. -->
+    <!---->
+    <!--     <figure class="m-4 w-fit border shadow-black shadow-lg"> -->
+    <!--         <iframe width="600" height="450" -->
+    <!--                 src="https://datastudio.google.com/embed/reporting/e1bb6678-b8fa-4918-ab84-ddc35097590e/page/cwepC" -->
+    <!--                 frameborder="0" style="border:0" allowfullscreen></iframe> -->
+    <!--     </figure> -->
+    <!-- </div> -->
 
 </main>
 
