Added stuff to resume

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
         <div class="m-4 p-1 flex flex-wrap flex-start"> <!--Outer Div containing both row and more...-->
             <div class="p-2 flex-grow flex-col">
-                <h3 class="whitespace-nowrap text-lg">Who is Will(iam) Kaiser?</h3>
+                <h3 class="whitespace-nowrap text-lg">Who am I?</h3>
 
                 <p class="max-w-md">
-                   I am interested in programming, data science and recently web development. Oh, and I make bread. I have made 62 loaves
+                   I am interested in programming, data science and web development. Oh, and I make bread. I have made 62 loaves
                     in the past 90 days.
                 </p>
 
@@ -92,7 +92,18 @@
         <ul class="m-4 p-1">
             <li class="resume-component">
                 <h3>Education</h3> <!--This is for education and it should be hidden-->
-
+                  
+                  <ul class="flex flex-row justify-between">
+                    <div class="flex-col">
+                        <strong>The University of Virginia | School of Engineering and Applied Sciences</strong>
+                        <p class="flex-auto">GPA 3.90</p>
+                    </div>
+                    <div class="flex-none flex flex-col">
+                        <strong class="text-right">Charlottesville, VA</strong>
+                        <p class="text-right">August 2022 - May 2025</p>
+                    </div>
+                </ul>
+            
                 <ul class="flex flex-row justify-between">
                     <div class="flex-col">
                         <strong>The Academy of Science and Technology at College Park High School</strong>
