Added an article I wrote

--- a/index.html
+++ b/index.html
@@ -286,6 +286,19 @@
         <h2>Articles</h2>
 
         <ul id="articles_list">
+          <a href="https://www.linkedin.com/pulse/behind-innovation-insights-from-international-science-william-kaiser%3FtrackingId=ZES9lIDsRbWuKh019SQSKg%253D%253D/?trackingId=ZES9lIDsRbWuKh019SQSKg%3D%3D">
+            <div class="flex flex-col">
+                        <h3 class="text-lg">Behind The Innovation: Insights from the International Science and Engineering Fair</h3>
+                        <p class="text-md">By: William Kaiser</p>
+                        <ul class="flex flex-row">
+                          <li class="m-1 p-1 text-beige text-sm bg-black">Science Fair</li>
+                          <li class="m-1 p-1 text-beige text-sm bg-black">Python</li>
+                          <li class="m-1 p-1 text-beige text-sm bg-black">Pandas</li>
+                          <li class="m-1 p-1 text-beige text-sm bg-black">Bokeh</li>
+
+                        </ul>
+                    </div>
+           <img class="h-auto w-2/5" src="https://media.licdn.com/dms/image/D5612AQE3l4-rhPEQEg/article-cover_image-shrink_423_752/0/1684717677424?e=1690416000&v=beta&t=Tk3jHMZTZ0fSHp1FV95J36nEUw9-QjXgwoWcJ9apXjg" alt="Science fair competition day"></a>
             <!--This will be found out about the articles present...-->
         </ul>
     </div>
