Updated to include ISEF Analysis

--- a/index.html
+++ b/index.html
@@ -277,7 +277,19 @@
                 </p>
             </li>
             <li>
-                Bread NFTs
+                <h3>International Science and Engineering Fair (ISEF) Analysis</h3>
+                <p>
+                    Scraped, cleaned and conducted analysis on <a href="https://abstracts.societyforscience.org">abstracts.societyforscience.org</a> to demystify colloquial lore passed around at competition and created an interactive visualization of past projects and categories.
+
+                    <a href="https://www.linkedin.com/pulse/behind-innovation-insights-from-international-science-william-kaiser/">read the article here</a>
+
+                    <br>
+
+                    <a href="https://wkaisertexas.github.io/all-isef-projects">
+                    Interactive Visualization
+                    </a>
+                </p> 
+
             </li>
         </ul>
     </div>
